--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -63,7 +63,7 @@ kylin.job.concurrent.max.limit=10
 kylin.job.mapreduce.max.reducer.number=5
 
 #the percentage of the sampling, default 100%
-kylin.job.cubing.inMem.sampling.percent=100
+kylin.job.cubing.inmem.sampling.percent=100
 
 # The cut size for hbase region, in GB.
 # E.g, for cube whose capacity be marked as "SMALL", split region per 10GB by default
