--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -69,9 +69,11 @@ kylin.job.cubing.inmem.sampling.percent=100
 
 # The cut size for hbase region, in GB.
 # E.g, for cube whose capacity be marked as "SMALL", split region per 10GB by default
-kylin.hbase.region.cut.small=10
-kylin.hbase.region.cut.medium=20
-kylin.hbase.region.cut.large=100
+kylin.hbase.region.cut=5
+# The hfile size of GB, smaller hfile leading to the converting hfile MR has more reducers and be faster
+# set 0 to disable this optimization
+kylin.hbase.hfile.size.gb=2
+
 
 # Time interval to check hadoop job status
 kylin.job.yarn.app.rest.check.interval.seconds=10
