--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.apache.kylin</groupId>
     <artifactId>kylin</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.1</version>
+    <version>1.5.2-SNAPSHOT</version>
 
     <name>Kylin:HadoopOLAPEngine</name>
     <url>http://kylin.apache.org</url>
@@ -169,7 +169,7 @@
         <connection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</connection>
         <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</developerConnection>
         <url>https://git-wip-us.apache.org/repos/asf/kylin.git</url>
-        <tag>kylin-1.5.1</tag>
+        <tag>apache-kylin-2.1</tag>
     </scm>
 
     <dependencyManagement>
