--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
         <xalan.version>2.7.1</xalan.version>
         <compress-lzf.version>1.0.3</compress-lzf.version>
         <!--<extendedset.version>1.3.4</extendedset.version>-->
-        <roaring.version>[0.5.4,)</roaring.version>
+        <roaring.version>0.5.4</roaring.version>
         <jetty.version>9.2.7.v20150116</jetty.version>
         <opencsv.version>2.3</opencsv.version>
 
