--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <kryo.version>3.0.3</kryo.version>
         <ehcache.version>2.8.1</ehcache.version>
         <apache-httpclient.version>4.5</apache-httpclient.version>
-        <roaring.version>(0.5.4,]</roaring.version>
+        <roaring.version>0.6.14</roaring.version>
 
         <!-- REST Service -->
         <spring.framework.version>3.1.2.RELEASE</spring.framework.version>
