--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -18,5 +18,5 @@
 
 REVIEWBOARD_URL = "https://reviews.apache.org"
 REPOSITORY = "kylin"
-BRANCH = "1.x-staging"
-LAND_DEST_BRANCH = "1.x-staging"
+BRANCH = "1.3.x"
+LAND_DEST_BRANCH = "1.3.x"
