--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -74,7 +74,7 @@
                         <configuration>
                             <minimizeJar>false</minimizeJar>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>tool</shadedClassifierName>
+                            <shadedClassifierName>assembly</shadedClassifierName>
                             <artifactSet>
                                 <excludes>
                                     <exclude>io.netty:*</exclude>
