--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -31,11 +31,6 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.kylin</groupId>
-            <artifactId>kylin-source-kafka</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kylin</groupId>
             <artifactId>kylin-storage-hbase</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
@@ -64,7 +59,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
-
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -72,15 +66,12 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <minimizeJar>false</minimizeJar>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>assembly</shadedClassifierName>
                             <artifactSet>
-                                <excludes>
-                                    <exclude>io.netty:*</exclude>
-                                    <exclude>org.apache.zookeeper:*</exclude>
-                                    <exclude>net.sf.ehcache:*</exclude>
-                                </excludes>
+                                <includes>
+                                    <include>org.apache.kylin:*</include>
+                                </includes>
                             </artifactSet>
                             <filters>
                                 <filter>
