--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -7,6 +7,7 @@
     "angular-resource": "~1.3.12",
     "angular-route": "1.2.15",
     "ng-grid": "2.0.11",
+    "angular-ui-grid": "3.1.1",
     "angular-chosen-localytics": "1.0.6",
     "animate.css": "3.0.0",
     "bootstrap": "3.0.0",
